remove hardcoded "Joueur anonyme" in back